# BudgetBros

./: .editorconfig  .prettierrc.json  README.md  angular.json  capacitor.config.ts  db_designer_link  eslint.config.js  eslint.config.mjs  package-lock.json  package.json
backend/: Cargo.toml  Dockerfile  build.rs  compose.yaml
backend/migrations/: 0001_users.sql  0002_budget_categories.sql  0002_budgets.sql  0003_budget_categories.sql  0003_line_items.sql  0003_transactions.sql  0004_line_items.sql  0004_transactions.sql  0005_budgets.sql  0005_transactions.sql  0006_transaction_updates.sql  0007_add_budget_category_order.sql  0007_transactions_deleted_field copy.sql  0008_add_line_item_order.sql  0009_add_budget_income_props.sql  0009_transaction_cascade_null_add.sql  0010_add_income_transaction_column.sql  0010_line_items_cascade_bc_delete.sql  0011_add_fund_id.sql  0011_line_items_cascade_bc_add.sql  0012_add_nullable_line_item_id_on_transaction  0012_add_settings_table.sql  0013_add_split_transaction_id.sql  0013_update_settings_pk.sql
backend/old_migrations/: 0006_budget_categories_add_budget_fk.sql  0008_transaction_cascade_null_delete.sql  0012_add_new_line_item_id.sql  0013_drop_transaction_fk.sql  0014_add_new_line_item_pk.sql  0015_drop_old_line_item_id.sql  0016_add_new_transaction_fk.sql
backend/src/: main.rs
backend/src/auth/: auth.control.rs  auth.middleware.rs  auth.models.rs  auth.router.rs  mod.rs
backend/src/budget_categories/: budget_categories.control.rs  budget_categories.models.rs  mod.rs  (+2 more)
backend/utils/: mod.rs  route_utils.rs
(+193 files in other folders)
