[package]
name = "budget-bros-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-cors = "0.7.0"
actix-web = "4.5.1"
actix-web-httpauth = "0.8.1"
argonautica = "0.2.0"
chrono = { version = "0.4.38", features = ["serde"] }
clippy = "0.0.302"
dotenv = "0.15.0"
env_logger = "0.11.3"
hmac = "0.12.1"
jwt = "0.16.0"
log = "0.4.22"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
sha2 = "0.10.8"
sqlx = { version = "0.7.4", features = ["runtime-async-std-native-tls", "postgres", "chrono"] }
